@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2016   The R Core Team
+ *  Copyright (C) 2016-2022 The R Core Team
  *
  *  Based on code donated from the data.table package
  *  (C) 2006-2015 Matt Dowle and Arun Srinivasan.
@@ -1696,8 +1696,10 @@ SEXP attribute_hidden do_radixsort(SEXP call, SEXP op, SEXP args, SEXP rho)
     
     int maxgrpn = gsmax[flip];   // biggest group in the first arg
     void *xsub = NULL;           // local
-    int (*f) ();  // called with pointer, int
-    void (*g) (); // called with pointer, int *, int
+// This was not valid C23, and clang 15 warns it was not valid C99 either.
+//    int (*f) ();  // called with fn pointer, int
+//    void (*g) (); // called with fn pointer, int *, int
+    int fgtype;
     
     if (narg > 1 && gsngrp[flip] < n) {
         // double is the largest type, 8
@@ -1725,26 +1727,31 @@ SEXP attribute_hidden do_radixsort(SEXP call, SEXP op, SEXP args, SEXP rho)
 	switch (TYPEOF(x)) {
 	case INTSXP:
 	case LGLSXP:
-	    f = &isorted;
-	    g = &isort;
+//	    f = &isorted;
+//	    g = &isort;
+	    fgtype = 1;
 	    break;
 	case REALSXP:
 	    twiddle = &dtwiddle;
 	    is_nan = &dnan;
-	    f = &dsorted;
-	    g = &dsort;
+	    fgtype = 2;
+//	    f = &dsorted;
+//	    g = &dsort;
 	    break;
 	case STRSXP:
-	    f = &csorted;
+	    fgtype = 3;
+//	    f = &csorted;
 	    if (sortStr) {
 		csort_pre(xd, n);
 		alloc_csort_otmp(gsmax[1 - flip]);
-		g = &csort;
+//		g = &csort;
 	    }
 	    // no increasing/decreasing order required if sortStr = FALSE,
 	    // just a dummy argument
-	    else
-		g = &cgroup;
+	    else {
+		fgtype = 4;
+//		g = &cgroup;
+	    }
 	    break;
 	default:
 	    Error("Arg %d is type '%s', not yet supported",
@@ -1809,7 +1816,18 @@ SEXP attribute_hidden do_radixsort(SEXP call, SEXP op, SEXP args, SEXP rho)
             // continue; // BASELINE short circuit timing
             // point. Up to here is the cost of creating xsub.
             // [i|d|c]sorted(); very low cost, sequential
-            tmp = (*f)(xsub, thisgrpn);
+//            tmp = (*f)(xsub, thisgrpn);
+	    switch(fgtype) {
+	    case 1:
+		tmp = isorted(xsub, thisgrpn);
+		break;
+	    case 2:
+		tmp = dsorted(xsub, thisgrpn);
+		break;
+	    case 3:
+	    case 4:
+		tmp = csorted(xsub, thisgrpn);
+	    }
             if (tmp) {
                 // *sorted will have already push()'d the groups
                 if (tmp == -1) {
@@ -1836,8 +1854,13 @@ SEXP attribute_hidden do_radixsort(SEXP call, SEXP op, SEXP args, SEXP rho)
 	    newo[0] = -1;
 	    // may update osub directly, or if not will put the
 	    // result in global newo
-	    (*g)(xsub, osub, thisgrpn);
-
+//	    (*g)(xsub, osub, thisgrpn);
+	    switch(fgtype) {
+	    case 1: isort(xsub, osub, thisgrpn); break;
+	    case 2: dsort(xsub, osub, thisgrpn); break;
+	    case 3: csort(xsub, osub, thisgrpn); break;
+	    case 4: cgroup(xsub, osub, thisgrpn); break;
+	    }
 	    if (newo[0] != -1) {
 		if (nalast != 0)
 		    for (int j = 0; j < thisgrpn; j++)
